--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/004/742/414/original/chess-pawn-with-shadow-of-a-king-chess-vector.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta itemprop="name" content="Chess App">
+<meta itemprop="description" content="Online chess app">
+<meta itemprop="image" content="https://static.vecteezy.com/system/resources/previews/004/742/414/original/chess-pawn-with-shadow-of-a-king-chess-vector.jpg">
+    <title>Chess App</title>
+<meta name="description" content="Online chess app">
+
+<!-- Google / Search Engine Tags -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +28,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
